[gd_scene load_steps=14 format=2]

[ext_resource path="res://Fonts/Timeless-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Assessment.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.133333, 0.439216, 0.576471, 1 )

[sub_resource type="DynamicFont" id=2]
size = 22
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.0705882, 0.470588, 0.65098, 1 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.0705882, 0.470588, 0.65098, 1 )

[sub_resource type="StyleBoxLine" id=6]
color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxLine" id=7]
color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxLine" id=8]
color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxLine" id=9]
color = Color( 0, 0, 0, 0 )

[sub_resource type="StyleBoxLine" id=10]
color = Color( 0, 0, 0, 0 )

[sub_resource type="DynamicFont" id=11]
size = 20
font_data = ExtResource( 1 )

[node name="Assessment" type="Panel"]
margin_right = 540.0
margin_bottom = 50.0
rect_min_size = Vector2( 540, 50 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AssessmentInfo" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -270.0
margin_top = -25.0
margin_right = 270.0
margin_bottom = 25.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AssessmentName" type="Panel" parent="AssessmentInfo"]
margin_right = 320.0
margin_bottom = 50.0
rect_min_size = Vector2( 320, 50 )
custom_styles/panel = SubResource( 1 )

[node name="Label" type="Label" parent="AssessmentInfo/AssessmentName"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -25.0
margin_right = 160.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Quizzes"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mark" type="Panel" parent="AssessmentInfo"]
margin_left = 330.0
margin_right = 430.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
custom_styles/panel = SubResource( 3 )

[node name="Label" type="Label" parent="AssessmentInfo/Mark"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -25.0
margin_right = 40.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "95"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Weight" type="Panel" parent="AssessmentInfo"]
margin_left = 440.0
margin_right = 540.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
custom_styles/panel = SubResource( 5 )

[node name="Label" type="Label" parent="AssessmentInfo/Weight"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -25.0
margin_right = 40.0
margin_bottom = 25.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "10"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EditAssessment" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -270.0
margin_top = -25.0
margin_right = 270.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 50 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}
